# mot-vis

./: .gitignore  README.md  plot_to_video.py  pyproject.toml
mot_vis/: __init__.py  io.py
mot_viz/: __init__.py
